# goa-cyber-petrol-backend

./: .env  .replit  db.py  main.py  models.py  pyproject.toml  pyvenv.cfg  replit.md  requirements.txt
Scripts/: activate  activate.bat
attached_assets/: Pasted-You-are-an-expert-Python-backend-developer-Generate-a-complete-FastAPI-backend-project-for-a-ha-1758395250295_1758395250297.txt  Pasted-You-are-an-expert-Python-backend-developer-I-want-you-to-generate-a-complete-FastAPI-backend-proj-1758389001206_1758389001207.txt
data/: flagged_posts.db  official_resorts.csv
routes/: alerts.py  dashboard.py  evidence.py  flags.py  hotels.py  ingestion.py  settings.py
utils/: instagram_scraper.py  keyword_checker.py  telegram_client.py  website_scraper.py
