[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.2",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "telethon>=1.41.2",
    "uvicorn>=0.36.0",
]
